Fixed preview issue - aligned project pagination w. bottom

--- a/pages/projects/[slug]/project.module.scss
+++ b/pages/projects/[slug]/project.module.scss
@@ -1,5 +1,11 @@
 @import 'styling/spectre/variables';
 
+.project {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .backButton {
   position: absolute;
   top: 15px;
